--- a/budget_section.html
+++ b/budget_section.html
@@ -51,6 +51,12 @@
         <h1>Manage Budget</h1>
     </header>
 
+    <!-- Compact month selector (doesn't change main frame layout) -->
+    <div style="margin:10px 0 18px 0; display:flex; align-items:center; gap:12px;">
+        <label for="month-selector" style="font-weight:600; color:#333;">Select month:</label>
+        <input id="month-selector" type="month" style="padding:8px 10px; border-radius:6px; border:1px solid #ddd;" />
+    </div>
+
     <!-- SUMMARY CARDS -->
     <!-- TOP KPI ROW -->
  <div class="kpi-row" style="display:flex; gap:20px; margin-bottom:18px;">
@@ -181,14 +187,20 @@
     // Fixed API base so it works from both localhost and Go Live (127.0.0.1). Backend must run on port 8000.
     const API_BASE = 'http://127.0.0.1:8000';
 
-    // Populate the top KPI blocks for the current month
+    // Populate the top KPI blocks for the selected month (falls back to current month)
+    let selectedMonth = null; // format YYYY-MM
+    let currentCategory = 'COGS';
+
     function _getCurrentMonthRange() {
         const now = new Date();
         const y = now.getFullYear();
         const m = String(now.getMonth() + 1).padStart(2, '0');
-        const month = `${y}-${m}`;
+        const currentMonth = `${y}-${m}`;
+        const effective = selectedMonth || currentMonth;
+        const [ey, em] = effective.split('-').map(v => parseInt(v, 10));
+        const month = `${String(ey)}-${String(em).padStart(2, '0')}`;
         const start = `${month}-01`;
-        const lastDay = new Date(now.getFullYear(), now.getMonth() + 1, 0).getDate();
+        const lastDay = new Date(ey, em, 0).getDate();
         const end = `${month}-${String(lastDay).padStart(2, '0')}`;
         return { month, start, end };
     }
@@ -246,6 +258,21 @@
     }
 
     document.addEventListener('DOMContentLoaded', function() {
+        // initialize month selector input (compact control)
+        const monthInput = document.getElementById('month-selector');
+        if (monthInput) {
+            // default to current month in YYYY-MM
+            const now = new Date();
+            const defaultMonth = `${now.getFullYear()}-${String(now.getMonth() + 1).padStart(2, '0')}`;
+            selectedMonth = defaultMonth;
+            monthInput.value = defaultMonth;
+            monthInput.addEventListener('change', function() {
+                if (this.value) selectedMonth = this.value;
+                updateTopKPIs();
+                loadCategoryBreakdown(currentCategory);
+            });
+        }
+
         // run after page load; also refresh when budgets change if needed
         updateTopKPIs();
         // refresh periodically in case background edits occur
@@ -260,8 +287,7 @@
 
         async function loadCategoryBreakdown(categoryKey) {
             // categoryKey should be 'COGS' or 'Operating expense'
-            const now = new Date();
-            const month = `${now.getFullYear()}-${String(now.getMonth() + 1).padStart(2, '0')}`;
+            const { month, start, end } = _getCurrentMonthRange();
             headerEl.innerText = `1. ${categoryKey === 'COGS' ? 'COGS (Cost of Goods Sold)' : 'Operating expense (Operating Expenses)'} for ${month}`;
 
             // fetch budgets for month
@@ -271,17 +297,17 @@
                 if (res.ok) budgets = await res.json();
             } catch (e) { console.error('Failed to fetch budgets:', e); }
 
-            // filter rows for selected main category
-            const rows = budgets.filter(b => String(b.category).trim() === categoryKey);
+            // filter rows for selected main category (case-insensitive match to avoid minor casing/wording differences)
+            const rows = budgets.filter(b => String(b.category || '').trim().toLowerCase() === String(categoryKey || '').trim().toLowerCase());
 
             // compute total budgeted for this main category
             const totalBudgeted = rows.reduce((s, r) => s + parseFloat(r.amount || 0), 0);
 
             // fetch actual spent per subcategory from daily expense entries (only expense records, summed by subcategory)
-            const { start, end } = _getCurrentMonthRange();
+            // start/end already available from earlier call
             let actualBySubcategory = {};
             try {
-                const expRes = await fetch(`${API_BASE}/api/expense-by-subcategory?start_date=${start}&end_date=${end}&sales_only=true`);
+                const expRes = await fetch(`${API_BASE}/api/expense-by-subcategory?start_date=${start}&end_date=${end}&sales_only=true&source=both`);
                 if (expRes.ok) {
                     const expList = await expRes.json();
                     const byCat = {};
@@ -374,11 +400,13 @@
         btnCogs.addEventListener('click', function() {
             btnCogs.style.background = '#0b74ff'; btnCogs.style.color = '#fff';
             btnOpex.style.background = '#eee'; btnOpex.style.color = '#000';
+            currentCategory = 'COGS';
             loadCategoryBreakdown('COGS');
         });
         btnOpex.addEventListener('click', function() {
             btnOpex.style.background = '#0b74ff'; btnOpex.style.color = '#fff';
             btnCogs.style.background = '#eee'; btnCogs.style.color = '#000';
+            currentCategory = 'Operating expense';
             loadCategoryBreakdown('Operating expense');
         });
 
